test: Use a declarative FS layout-diff for post tests assertions